# betterr

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: betterr.h  error.h  result.h
src/: betterr.c  error.c
tests/: test_betterr.c
